# jtriangle

./: .gitignore  JTriangle.h  README.md  pom.xml
JTriangle/: pom.xml
JTriangle/src/main/java/: JTriangle.java  LibUtils.java
JTriangle/src/main/java/com/dedovic/jtriangle/: Point.java  Triangle.java  Triangulate.java
JTriangle/src/main/java/com/dedovic/jtriangle/triangle/: JTriangle.java  LibUtils.java  TriangulateIO.java
JTriangle/src/test/java/: JTriangleTest.java
JTriangle/src/test/java/com/dedovic/jtriangle/: TriangulateTest.java
JTriangle/src/test/java/com/dedovic/jtriangle/triangle/: JTriangleTest.java
JTriangleJNI/: CMakeLists.txt
JTriangleJNI/src/: JTriangle.cpp  JTriangle.h
triangle-clj/: .gitignore  project.clj
triangle-clj/src/clj/com/dedovic/triangle/: core.clj
